reticker functions and some bug fixes